--- a/README
+++ b/README
@@ -1,9 +1,2 @@
-This package provides a "client" synchronization plugin to the Buteo
-sync framework.  It connects to CardDAV servers using a valid account
-(accounts&sso framework) and synchronizes contact data from the
-remote CardDAV service to the device and vice versa.
-
-It is a two-way sync plugin.
-
-Huge thanks to SabreDAV for the in-depth information available on their
-site about CardDAV (http://sabre.io/dav/building-a-carddav-client/)
+This project has migrated to https://git.merproject.org/mer-core/buteo-sync-plugin-carddav
+as part of the Mer/Nemo merge work
